# melolang

./: CMakeLists.txt  README.md
include/melo/: ast.h  list.h  melo.h  module.h  phrase.h  string.h  zone.h
include/melo/evaluator/: evaluate_nodes.h  module.h  scope.h  section_walker.h  values.h
src/: melo.cc  string.cc  zone.cc
src/evaluator/: evaluate_nodes.cc  evaluate_nodes.h  module.cc  scope.cc  section_walker.cc  utils.cc  utils.h  values.cc
src/parser/: parser.cc  parser.h  state.h  token_types.cc  token_types.h  tokenizer.cc  tokenizer.h
